--- a/system/templates/actor/parts/sidebar/stress.hbs
+++ b/system/templates/actor/parts/sidebar/stress.hbs
@@ -39,7 +39,7 @@
     {{/each}}
 
     <div class="fatex__stress__track fatex__helper__editmode">
-        <h2 class="fatex-headline fatex__headline--center fatex__stress__add">+</h2>
+        <h2 class="fatex-headline fatex-headline--center fatex__stress__add">+</h2>
     </div>
 
 </div>
