--- a/system/templates/actor/parts/tabs/extras.hbs
+++ b/system/templates/actor/parts/tabs/extras.hbs
@@ -1,7 +1,7 @@
 <div class="fatex__extras">
 
     <div class="fatex__extra__add fatex__helper__editmode fatex__helper__editmode--vanish">
-        <h2 class="fatex-headline fatex__headline--center">
+        <h2 class="fatex-headline-center">
             <span>+</span>
         </h2>
     </div>
