--- a/system/templates/actor/parts/header.hbs
+++ b/system/templates/actor/parts/header.hbs
@@ -28,7 +28,5 @@
         </div>
     </div>
 
-    <div class="fatex-header__logo">
-        <img class="fatex-header__logo-image" src="/systems/fatex/assets/logos/powered_by_fate.svg">
-    </div>
+    <img class="fatex-header__logo" src="/systems/fatex/assets/logos/powered_by_fate.svg">
 </header>
