--- a/src/styles/components/headline/headline.scss
+++ b/src/styles/components/headline/headline.scss
@@ -10,12 +10,23 @@
 
     @include cutoff(15px);
 
-    &--icon {
-        position: relative;
-    }
-
     &--center {
         text-align: center;
+    }
+
+    &__icon {
+        position: absolute;
+        top: 0;
+        left: 100%;
+        transform: translate(-25px, 0px);
+        font-weight: 900;
+        color: $sheet-background;
+        -webkit-text-stroke: 2px $primary-color;
+        text-shadow: initial;
+
+        &--negative {
+            color: $caution-color;
+        }
     }
 }
 
