--- a/system/templates/actor/parts/tabloid/aspects.hbs
+++ b/system/templates/actor/parts/tabloid/aspects.hbs
@@ -1,10 +1,10 @@
 <div class="u-padding-std">
-    <h2 class="fatex-headline">
-        <span>{{localize "FAx.Sheet.Aspects"}}</span>
+    <header class="fatex-headline">
+        <h2 class="fatex-headline__text">{{localize "FAx.Sheet.Aspects"}}</h2>
         <div class="fatex__headline__actions fatex__item__actions">
             <span class="fatex__item__add fatex__aspect__add"></span>
         </div>
-    </h2>
+    </header>
 
     {{#each aspects as |aspect aspectIndex|}}
         <div class="fatex__aspect fatex__input fatex__sortable item" data-item-id="{{aspect._id}}">
