--- a/system/templates/actor/parts/tabloid/consequences.hbs
+++ b/system/templates/actor/parts/tabloid/consequences.hbs
@@ -1,10 +1,10 @@
 <div class="u-padding-std">
-    <h2 class="fatex-headline">
-        <span>{{localize "FAx.Sheet.Consequences"}}</span>
+    <header class="fatex-headline">
+        <h2 class="fatex-headline__text">{{localize "FAx.Sheet.Consequences"}}</h2>
         <div class="fatex__headline__actions fatex__item__actions">
             <span class="fatex__item__add fatex__consequence__add"></span>
         </div>
-    </h2>
+    </header>
 
     {{#each consequences as |consequence consequenceIndex|}}
         <div
