--- a/system/templates/actor/parts/tabs/stunts.hbs
+++ b/system/templates/actor/parts/tabs/stunts.hbs
@@ -9,8 +9,8 @@
 
     {{#each stunts as |stunt stuntIndex|}}
         <div class="fatex__stunt item {{#if stunt.data.collapsed}}fatex__stunt__collapsed{{/if}}" data-item-id="{{stunt._id}}">
-            <h2 class="fatex-headline fatex__sortable" data-item-id="{{stunt._id}}">
-                <span>{{stunt.name}}</span>
+            <header class="fatex-headline fatex__sortable" data-item-id="{{stunt._id}}">
+                <h3 class="fatex-headline__text">{{stunt.name}}</h3>
 
                 <div class="fatex__headline__actions fatex__item__actions">
                     <span class="fatex__item__sort fatex__stunt__sort"></span>
@@ -21,7 +21,7 @@
                 <div class="fatex__item__collapsible">
                     <span class="fatex__item__collapse fatex__stunt__collapse--toggle {{#if stunt.data.collapsed}}fatex__item__collapse--closed{{/if}}" data-item="{{stunt._id}}"></span>
                 </div>
-            </h2>
+            </header>
 
             {{#unless stunt.data.collapsed}}
                 {{#if stunt.data.description}}
