--- a/system/templates/chat/roll-skill.hbs
+++ b/system/templates/chat/roll-skill.hbs
@@ -1,6 +1,6 @@
 <div class="fatex-chat">
-    <header class="fatex-chat__headline-container">
-        <h2 class="fatex-headline">{{ skill.name }}</h2>
+    <header class="fatex-headline fatex-headline--chat">
+        <h3 class="fatex-headline__text">{{ skill.name }}</h3>
 
         <span class="fatex-headline__icon{{#if skill.data.isNegative}} fatex-headline__icon--negative{{/if}}">
             {{#if skill.data.isPositive}}+{{/if}}{{ rank }}
