--- a/system/templates/actor/parts/sidebar/artwork.hbs
+++ b/system/templates/actor/parts/sidebar/artwork.hbs
@@ -5,9 +5,9 @@
         }
     </style>
 
-    <h2 class="fatex-headline">
-        <span>{{localize "FAx.Sheet.Artwork"}}</span>
-    </h2>
+    <header class="fatex-headline">
+        <h2 class="fatex-headline__text">{{localize "FAx.Sheet.Artwork"}}</h2>
+    </header>
 
     <div class="fatex__artwork--image fatex__artwork--image--{{actor._id}}" title="{{actor.name}}"></div>
     <img class="fatex__artwork--handler profile" alt="{{actor.name}}" data-edit="img" src="{{actor.img}}"/>
