--- a/system/templates/actor/parts/sidebar/stress.hbs
+++ b/system/templates/actor/parts/sidebar/stress.hbs
@@ -1,14 +1,14 @@
 <div class="u-padding-std">
     {{#each stress as |stress stressIndex|}}
         <div class="fatex__stress__track fatex__stress__track--index-{{stressIndex}} item {{#if stress.isDisabled}}fatex__helper--is-disabled{{/if}}" data-item-id="{{stress._id}}">
-            <h2 class="fatex-headline fatex__sortable" data-item-id="{{stress._id}}">
-                <span>{{stress.name}}</span>
+            <header class="fatex-headline fatex__sortable" data-item-id="{{stress._id}}">
+                <h2 class="fatex-headline__text">{{stress.name}}</h2>
                 <div class="fatex__headline__actions fatex__item__actions">
                     <span class="fatex__item__sort fatex__stress__sort"></span>
                     <span class="fatex__item__settings fatex__stress__settings" data-item="{{stress._id}}"></span>
                     <span class="fatex__item__delete fatex__stress__delete" data-item="{{stress._id}}"></span>
                 </div>
-            </h2>
+            </header>
 
             {{#if stress.data.description}}
                 <span class="fatex__stress__track__description">
