--- a/system/templates/apps/sheet-setup.hbs
+++ b/system/templates/apps/sheet-setup.hbs
@@ -25,16 +25,16 @@
                         <div class="fatex__vertical_tabs__tab__content">
 
                             {{#each system.types as |type typeLabel|}}
-                                <div class="fatex__sheet_setup__type">
-                                    <div class="fatex-headline">
-                                        {{typeLabel}}
+                                <section class="fatex__sheet_setup__type">
+                                    <header class="fatex-headline">
+                                        <h2 class="fatex-headline__text">{{typeLabel}}</h2>
 
                                         <div class="fatex__headline__actions">
                                             <span class="fatex__headline__action setup_action--toggle-type">
                                                 {{localize "FAx.Apps.Setup.Actions.Setup.ToggleSelection"}}
                                             </span>
                                         </div>
-                                    </div>
+                                    </header>
 
                                     <div class="fatex__sheet_setup__groups">
                                         {{#each type as |group groupIndex|}}
@@ -63,7 +63,7 @@
                                             {{localize "FAx.Apps.Setup.Actions.Setup.AddToSheet"}}
                                         </span>
                                     </div>
-                                </div>
+                                </section>
                             {{/each}}
                         </div>
                     </div>
