--- a/system/templates/inline-sheet/parts/stress.hbs
+++ b/system/templates/inline-sheet/parts/stress.hbs
@@ -1,14 +1,14 @@
 <div class="u-padding-std">
     {{#each stress as |stress stressIndex|}}
         <div class="fatex__inline_stress__track fatex__inline_stress__track--index-{{stressIndex}} item {{#if stress.isDisabled}}fatex__helper--is-disabled{{/if}}" data-item-id="{{stress._id}}">
-            <h2 class="fatex-headline fatex__sortable" data-item-id="{{stress._id}}">
-                <span>{{stress.name}}</span>
+            <header class="fatex-headline fatex__sortable" data-item-id="{{stress._id}}">
+                <h3 class="fatex-headeline__text">{{stress.name}}</h3>
                 <div class="fatex__headline__actions fatex__item__actions">
                     <span class="fatex__item__sort fatex__inline_stress__sort"></span>
                     <span class="fatex__item__settings fatex__inline_stress__settings" data-item="{{stress._id}}"></span>
                     <span class="fatex__item__delete fatex__inline_stress__delete" data-item="{{stress._id}}"></span>
                 </div>
-            </h2>
+            </header>
 
             {{#if stress.data.description}}
                 <span class="fatex__inline_stress__track__description">
