Updates the fate__sortable class with a new fatex-eb-sortable version. This introduces the new eb- prefix to denote classes used purely for event bindings.

--- a/system/templates/actor/parts/tabloid/aspects.hbs
+++ b/system/templates/actor/parts/tabloid/aspects.hbs
@@ -7,7 +7,7 @@
     </header>
 
     {{#each aspects as |aspect aspectIndex|}}
-        <div class="fatex__aspect fatex__input fatex__sortable item" data-item-id="{{aspect._id}}">
+        <div class="fatex__aspect fatex__input fatex-eb-sortable item" data-item-id="{{aspect._id}}">
             <label class="fatex__aspect__label fatex__input__label">{{aspect.data.label}}</label>
 
             <div class="fatex__aspect__actions_wrapper">
