--- a/system/templates/actor/parts/tabs/extras.hbs
+++ b/system/templates/actor/parts/tabs/extras.hbs
@@ -9,7 +9,7 @@
     <div class="fatex__extras__wrapper">
         {{#each extras as |extra extraIndex|}}
             <div class="fatex__extra item {{#if extra.data.collapsed}}fatex__extra__collapsed{{/if}}" data-item-id="{{extra._id}}">
-                <header class="fatex-headline fatex__sortable" data-item-id="{{extra._id}}">
+                <header class="fatex-headline fatex-eb-sortable" data-item-id="{{extra._id}}">
                     <h3 class="fatex-headline__text">{{extra.name}}</h3>
 
                     <div class="fatex__headline__actions fatex__item__actions">
