--- a/system/templates/actor/parts/tabs/skills.hbs
+++ b/system/templates/actor/parts/tabs/skills.hbs
@@ -16,7 +16,7 @@
 
     <div class="fatex__skills__columns fatex__skills__columns--{{actor._id}}">
         {{#each skills as |skill skillIndex|}}
-            <div class="fatex__skill fatex__input fatex__input--icon fatex__sortable item" data-item-id="{{skill._id}}">
+            <div class="fatex__skill fatex__input fatex__input--icon fatex-eb-sortable item" data-item-id="{{skill._id}}">
 
                 <div class="fatex__skill__actions_wrapper">
                     <div class="fatex-headline">
