--- a/src/styles/components/headline/headline.scss
+++ b/src/styles/components/headline/headline.scss
@@ -1,17 +1,28 @@
 .fatex-headline {
     position: relative;
+    background: $headline-background;
+    box-shadow: 1px 1px 1px $shadow-color;
 
-    &::before {
+    &::before,
+    &::after {
         content: "";
         position: absolute;
+        width: 0;
+        height: 0;
+    }
+
+    &::before {
         top: 0;
         left: 0;
-        width: 100%;
-        height: 100%;
-        background: $headline-background;
-        box-shadow: 1px 1px 1px $shadow-color;
+        border-top: 15px solid #f1f2f6;
+        border-right: 15px solid transparent;
+    }
 
-        @include cutoff(15px);
+    &::after {
+        bottom: -2px;
+        right: -2px;
+        border-bottom: 17px solid #f1f2f6;
+        border-left: 17px solid transparent;
     }
 
     &--center {
@@ -27,6 +38,7 @@
         position: absolute;
         top: 0;
         left: 100%;
+        z-index: 100;
         transform: translate(-25px, 0px);
         font-weight: 900;
         color: $sheet-background;
