--- a/src/styles/components/skills/skills.scss
+++ b/src/styles/components/skills/skills.scss
@@ -45,6 +45,7 @@
     .fatex__helper--enable-editmode & {
         opacity: 1;
         pointer-events: all;
+        box-shadow: 1px 1px 1px $shadow-color;
     }
 }
 
