--- a/system/templates/actor/parts/tabs/skills.hbs
+++ b/system/templates/actor/parts/tabs/skills.hbs
@@ -1,12 +1,12 @@
-<div class="fatex__skills{{#if options.enableColumns}} fatex__skills--columns{{/if}}">
-    <h2 class="fatex__skills__headline">
-        <span>{{localize "FAx.Sheet.Skills"}}</span>
+<section class="fatex__skills{{#if options.enableColumns}} fatex__skills--columns{{/if}}">
+    <heading class="fatex-section-heading">
+        <h2>{{localize "FAx.Sheet.Skills"}}</h2>
 
         <div class="fatex__item__actions">
             <span class="fatex__item__sortrank fatex__skill__sortrank"></span>
             <span class="fatex__item__add fatex__skill__add"></span>
         </div>
-    </h2>
+    </heading>
 
     <style>
         .fatex__skills__columns--{{actor._id}} {
@@ -45,4 +45,4 @@
             </div>
         {{/each}}
     </div>
-</div>
+</section>
