--- a/src/styles/base/typography.scss
+++ b/src/styles/base/typography.scss
@@ -56,3 +56,9 @@
 #chat-log {
     font-family: $primary-font, sans-serif;
 }
+
+body {
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
