Updates the artwork classes and removes the defunct --hidden modifier.

--- a/src/styles/components/artwork/artwork.scss
+++ b/src/styles/components/artwork/artwork.scss
@@ -1,48 +1,44 @@
-.fatex__artwork {
+.fatex-artwork {
     position: relative;
     padding: $component-padding;
-}
 
-.fatex__artwork--hidden {
-    display: none;
-}
+    &__image {
+        position: relative;
+        width: 100%;
+        height: 200px;
+        background-size: cover;
+        background-position: top center;
 
-.fatex__artwork--image {
-    position: relative;
-    width: 100%;
-    height: 200px;
-    background-size: cover;
-    background-position: top center;
+        &::before,
+        &::after {
+            content: "";
+            position: absolute;
+        }
 
-    &::before,
-    &::after {
-        content: "";
-        position: absolute;
+        &::before {
+            top: 0;
+            left: 0;
+            border-top: 25px solid #f1f2f6;
+            border-right: 25px solid transparent;
+        }
+
+        &::after {
+            bottom: 0;
+            right: 0;
+            border-bottom: 25px solid #f1f2f6;
+            border-left: 25px solid transparent;
+        }
     }
 
-    &::before {
+    &__handler {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+
         top: 0;
         left: 0;
-        border-top: 25px solid #f1f2f6;
-        border-right: 25px solid transparent;
+
+        cursor: pointer;
+        opacity: 0;
     }
-
-    &::after {
-        bottom: 0;
-        right: 0;
-        border-bottom: 25px solid #f1f2f6;
-        border-left: 25px solid transparent;
-    }
-}
-
-.fatex__artwork--handler {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-
-    top: 0;
-    left: 0;
-
-    cursor: pointer;
-    opacity: 0;
 }
