--- a/system/templates/actor/parts/sidebar/artwork.hbs
+++ b/system/templates/actor/parts/sidebar/artwork.hbs
@@ -1,6 +1,6 @@
-<div class="fatex__artwork{{#if sheetConfig.hideArtwork}} fatex__artwork--hidden{{/if}}">
+<div class="fatex-artwork">
     <style>
-        .fatex__artwork--image--{{actor._id}} {
+        .fatex-artwork__image--{{actor._id}} {
             background-image: url("{{actor.img}}");
         }
     </style>
@@ -9,6 +9,6 @@
         <h2 class="fatex-headline__text">{{localize "FAx.Sheet.Artwork"}}</h2>
     </header>
 
-    <div class="fatex__artwork--image fatex__artwork--image--{{actor._id}}" title="{{actor.name}}"></div>
-    <img class="fatex__artwork--handler profile" alt="{{actor.name}}" data-edit="img" src="{{actor.img}}"/>
+    <div class="fatex-artwork__image fatex-artwork__image--{{actor._id}}" title="{{actor.name}}"></div>
+    <img class="fatex-artwork__handler profile" alt="{{actor.name}}" data-edit="img" src="{{actor.img}}"/>
 </div>
