--- a/system/templates/apps/template-actors-picker.hbs
+++ b/system/templates/apps/template-actors-picker.hbs
@@ -1,6 +1,6 @@
 {{#*inline "centerPartial"}}
-    <div class="fatex__header__center fatex__template__header__settings">
-        <span class="fatex__header__label">{{localize "FAx.Template.Picker.Configuration"}}</span>
+    <div class="fatex-header__center fatex__template__header__settings">
+        <span class="fatex-header__label">{{localize "FAx.Template.Picker.Configuration"}}</span>
         <i class="fas fa-cogs fatex__item__header__title"></i>
     </div>
 {{/inline}}
@@ -14,9 +14,9 @@
 <div class="fatex__templates">
 
     <div class="fatex__template">
-        <div class="fatex-headline">
-            <span>{{localize "FAx.Template.Picker.Empty"}}</span>
-        </div>
+        <header class="fatex-headline">
+            <h3 class="fatex-healing__text">{{localize "FAx.Template.Picker.Empty"}}</h3>
+        </header>
 
         <style>
             .fatex__template__image--empty {
