--- a/system/templates/item/consequence-sheet.hbs
+++ b/system/templates/item/consequence-sheet.hbs
@@ -2,9 +2,9 @@
 
 <div class="fatex__settings">
     <div class="fatex__setting">
-        <h2 class="fatex-headline">
-            <span>{{localize "FAx.Item.Consequence.Type.Label"}}</span>
-        </h2>
+        <header class="fatex-headline">
+            <h3 class="fatex-headline__text">{{localize "FAx.Item.Consequence.Type.Label"}}</h3>
+        </header>
 
         <div class="fatex__setting__radio__group">
             <div
