--- a/system/templates/apps/template-actors.hbs
+++ b/system/templates/apps/template-actors.hbs
@@ -1,6 +1,6 @@
 {{#*inline "centerPartial"}}
-    <div class="fatex__header__center fatex__template__header__settings fatex__template__create">
-        <span class="fatex__header__label">{{localize "FAx.Settings.Templates.App.CreateNew"}}</span>
+    <div class="fatex-header__center fatex__template__header__settings fatex__template__create">
+        <span class="fatex-header__label">{{localize "FAx.Settings.Templates.App.CreateNew"}}</span>
         <i class="fas fa-plus fatex__item__header__title"></i>
     </div>
 {{/inline}}
@@ -14,9 +14,9 @@
 <div class="fatex__templates">
     {{#each templateActors as |template templateIndex|}}
         <div class="fatex__template">
-            <div class="fatex-headline">
-                <span>{{ template.name }}</span>
-            </div>
+            <header class="fatex-headline">
+                <h3 class="fatex-headline__text">{{ template.name }}</h3>
+            </header>
 
             <style>
                 .fatex__template__image--{{template._id}} {
