--- a/system/templates/item/parts/layout/item-header.hbs
+++ b/system/templates/item/parts/layout/item-header.hbs
@@ -3,9 +3,9 @@
 
         {{!--HEADER--}}
         <div class="desk__header">
-            <div class="fatex__header item__header">
-                <div class="fatex__header__name">
-                    <label class="fatex__header__label fatex__item__header__label">
+            <div class="fatex-header">
+                <div class="fatex-header__name">
+                    <label class="fatex-header__label">
                         {{#if isOwnedBy}}
                             {{ isOwnedBy }}
                         {{else}}
@@ -15,9 +15,7 @@
                     <div class="fatex__header__title fatex__item__header__title">{{localize title}}</div>
                 </div>
 
-                <div class="fatex__header__logo">
-                    <img class="fatex__header__logo__image" src="/systems/fatex/assets/logos/powered_by_fate.svg">
-                </div>
+                <img class="fatex-header__logo" src="/systems/fatex/assets/logos/powered_by_fate.svg">
             </div>
         </div>
 
