--- a/system/templates/item/parts/settings/setting-input.hbs
+++ b/system/templates/item/parts/settings/setting-input.hbs
@@ -1,7 +1,7 @@
 <div class="fatex__setting">
-    <h2 class="fatex-headline">
-        <span>{{localize headline}}</span>
-    </h2>
+    <header class="fatex-headline">
+        <h3 class="fatex-headline__text">{{localize headline}}</h3>
+    </header>
 
     <label class="fatex__input" for="{{ fieldName }}">
         {{#if help}}<span class="fatex__setting__help">{{localize help}}</span>{{/if}}
