--- a/system/templates/item/parts/settings/setting-rank.hbs
+++ b/system/templates/item/parts/settings/setting-rank.hbs
@@ -1,7 +1,7 @@
 <div class="fatex__setting">
-    <h2 class="fatex-headline">
-        <span>{{localize headline}}</span>
-    </h2>
+    <header class="fatex-headline">
+        <h3 class="fatex-headline__text">{{localize headline}}</h3>
+    </header>
 
     <div class="fatex__setting__radio__group fatex__setting__radio__group--ranks">
         {{#each radioItems as |radioItem radioItemIndex|}}
