--- a/system/templates/item/stress-sheet.hbs
+++ b/system/templates/item/stress-sheet.hbs
@@ -9,9 +9,9 @@
     }}
 
     <div class="fatex__setting">
-        <h2 class="fatex-headline">
-            <span>{{localize "FAx.Item.Stress.Size"}}</span>
-        </h2>
+        <header class="fatex-headline">
+            <h3 class="fatex-headline__text">{{localize "FAx.Item.Stress.Size"}}</h3>
+        </header>
 
         <div class="fatex__setting__range">
             <input type="text" class="fatex__setting__range__value" value="{{data.size}}" />
@@ -20,9 +20,9 @@
     </div>
 
     <div class="fatex__setting">
-        <h2 class="fatex-headline ">
-            <span>{{localize "FAx.Item.Stress.Boxes.Label"}}</span>
-        </h2>
+        <header class="fatex-headline ">
+            <h3 class="fatex-headline__text">{{localize "FAx.Item.Stress.Boxes.Label"}}</h3>
+        </header>
 
         <div class="fatex__setting__radio__group">
             <div
@@ -58,9 +58,9 @@
     </div>
 
     <div class="fatex__setting{{#if (ne 2 data.labelType)}} fatex__setting--disabled{{/if}}">
-        <h2 class="fatex-headline">
-            <span>{{localize "FAx.Item.Stress.Boxes.Custom"}}</span>
-        </h2>
+        <header class="fatex-headline">
+            <h3 class="fatex-headline__text">{{localize "FAx.Item.Stress.Boxes.Custom"}}</h3>
+        </header>
 
         <label class="fatex__input" for="data.customLabel">
             <span class="fatex__setting__help">{{localize "FAx.Item.Stress.Boxes.CustomHelp"}}</span>
